# tyki-mikk

./: README.txt  main-x11.py  main.py  pyproject.toml
